# openjazz

./: .editorconfig  .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.3ds  Makefile.am  Makefile.arm  Makefile.debian  Makefile.dingoo  Makefile.gameshell  Makefile.haiku  Makefile.psp  Makefile.suse  Makefile.wiz  OpenJazz.h  PLATFORMS.md  README.md  bird.cpp  bird.h  bonus.c  bonus.cpp  bonus.h  bullet.cpp  bullet.h  configure.ac  events.c  events.cpp  events.h  file.cpp  file.h  font.c  font.cpp  font.h  game.cpp  game.h  gpl.txt  level.c  (+31 more)
.github/workflows/: ci.yml
3ds/: Makefile
builds/3ds/: Makefile
builds/android/: build.gradle  gradle.properties  settings.gradle
builds/android/app/: build.gradle  proguard-rules.pro
builds/android/app/src/main/: AndroidManifest.xml
builds/android/app/src/main/java/eu/alister/openjazz/: OpenJazz.java
builds/android/app/src/main/java/org/libsdl/app/: SDLActivity.java  (+2 more)
builds/android/app/src/main/res/values/: strings.xml
builds/ci/: adoc2html  adoc2man  adoc2txt  dir2zip  docs2dist
builds/cmake/: Find-Restrict-Keyword.cmake  Findconfuse.cmake  OJ-misc.cmake  Platform-Helpers.cmake
builds/psp/: Makefile
builds/riscos/!OpenJazz/: !Run,feb
builds/steamdeck/: build_appimage.sh
builds/symbian/s60v3/: BLD.INF  openjazz.mmp  openjazz.pkg
builds/symbian/uiq3/: openjazz.mmp  openjazz.pkg  openjazz.rss
builds/unix/: OpenJazz.6.adoc  OpenJazz.6.pod
doc/: BUILDING.md  Doxyfile  licenses.txt
ext/: CMakeLists.txt
ext/argparse/: argparse.cpp  argparse.h
ext/confuse/: CMakeLists.txt  config.h.in  confuse.c  lexer.c
ext/hashmap/: hashmap.cpp  hashmap.h
ext/lodepng/: lodepng-miniz.cpp  lodepng-miniz.h  lodepng.h
ext/mg/: assetsys.cpp  assetsys.h  strpool.cpp  strpool.h
ext/miniz/: miniz.cpp  miniz.h
ext/psmplug/: LICENSE  fastmix.cpp  load_psm.cpp  psmplug.cpp  psmplug.h  snd_dsp.cpp  snd_flt.cpp  snd_fx.cpp  sndfile.cpp  sndfile.h  sndmix.cpp  stdafx.h  tables.h
ext/scale2x/: CMakeLists.txt  scale2x.cpp  scale2x.h  scale3x.cpp  scale3x.h  scalebit.cpp  scalebit.h
ext/xmp/: CMakeLists.txt
ext/xmp/src/: format.c  format.h
ext/xmp/src/loaders/: common.c  loader.h
psp/: Makefile
res/: android
res/doxygen/: Doxyfile.in
res/emscripten/: shell.html
res/riscos/: !Boot,feb
res/unix/: OpenJazz.6.adoc
res/wii/: READMII.txt  meta.xml
res/windows/: OpenJazz.rc
riscos/!OpenJazz/: !Sprites,ff9
src/: OpenJazz.h  baselevel.cpp  baselevel.h  logo.h  loop.h  main.cpp  movable.cpp  movable.h  planet.cpp  planet.h  scene.cpp  scene.h  setup.cpp  setup.h  types.h  util.cpp  util.h  version.cpp  version.h
src/bonus/: bonus.cpp  bonus.h
src/game/: clientgame.cpp  game.cpp  game.h  gamemode.cpp  gamemode.h  localgame.cpp  servergame.cpp
src/io/: controls.cpp  controls.h  file.cpp  file.h  file_dir.cpp  file_dir.h  file_zip.cpp  file_zip.h  log.cpp  log.h  network.cpp  network.h  sound.cpp  sound.h
src/io/gfx/: anim.cpp  anim.h  font.cpp  font.h  paletteeffects.cpp  paletteeffects.h  sprite.cpp  sprite.h  video.cpp  video.h
src/io/gfx/scale2x/: getopt.cpp  pixel.cpp  portable.h  scale2x.cpp  scale3x.cpp  scalebit.cpp  scalebit.h  simple2x.cpp
src/jj1/: jj1episodeutils.cpp  jj1episodeutils.h
src/jj1/bonuslevel/: jj1bonuslevel.cpp  jj1bonuslevel.h  jj1bonuslevelplayer.cpp  jj1bonuslevelplayer.h
src/jj1/level/: jj1bird.cpp  jj1bird.h  jj1bullet.cpp  jj1bullet.h  jj1demolevel.cpp  jj1level.cpp  jj1level.h  jj1levelframe.cpp  jj1levelload.cpp  jj1levelplayer.cpp  jj1levelplayer.h  jj1levelplayerframe.cpp
src/jj1/level/event/: jj1bridge.cpp  jj1event.cpp  jj1event.h  jj1guardians.cpp  jj1guardians.h  jj1standardevent.cpp
src/jj1/planet/: jj1planet.cpp  jj1planet.h
src/jj1/save/: jj1save.cpp  jj1save.h
src/jj1/scene/: jj1scene.cpp  jj1scene.h  jj1sceneload.cpp
src/jj1bonuslevel/: jj1bonuslevel.cpp  jj1bonuslevel.h
src/jj1bonuslevel/jj1bonuslevelplayer/: jj1bonuslevelplayer.cpp  jj1bonuslevelplayer.h
src/jj1level/: jj1bullet.cpp  jj1bullet.h  jj1demolevel.cpp  jj1level.cpp  jj1level.h  jj1levelframe.cpp  jj1levelload.cpp
src/jj1level/jj1event/: jj1bridge.cpp  jj1event.cpp  jj1event.h  jj1guardians.cpp  jj1guardians.h  jj1standardevent.cpp
src/jj1level/jj1levelplayer/: jj1bird.cpp  jj1bird.h  jj1levelplayer.cpp  jj1levelplayer.h  jj1levelplayerframe.cpp
src/jj1planet/: jj1planet.cpp  jj1planet.h
src/jj1scene/: jj1scene.cpp  jj1scene.h  jj1sceneload.cpp
src/jj2/level/: jj2layer.cpp  jj2level.cpp  jj2level.h  jj2levelframe.cpp  jj2levelload.cpp  jj2levelplayer.cpp  jj2levelplayer.h  jj2levelplayerframe.cpp
src/jj2/level/event/: jj2event.cpp  jj2event.h  jj2eventframe.cpp
src/jj2level/: jj2layer.cpp  jj2level.cpp  jj2level.h  jj2levelframe.cpp  jj2levelload.cpp
src/jj2level/jj2event/: jj2event.cpp  jj2event.h  jj2eventframe.cpp
src/jj2level/jj2levelplayer/: jj2levelplayer.cpp  jj2levelplayer.h  jj2levelplayerframe.cpp
src/level/: bullet.cpp  bullet.h  demolevel.cpp  level.cpp  level.h  levelframe.cpp  levelload.cpp  levelplayer.cpp  levelplayer.h  movable.cpp  movable.h
src/level/event/: bridge.cpp  event.cpp  event.h  eventframe.cpp  guardians.cpp  guardians.h  standardevent.cpp
src/menu/: filemenu.cpp  gamemenu.cpp  mainmenu.cpp  menu.cpp  menu.h  menuutil.cpp  plasma.cpp  plasma.h  setupmenu.cpp
src/planet/: planet.cpp  planet.h
src/player/: bird.cpp  bird.h  bonusplayer.cpp  bonusplayer.h  jj2levelplayer.cpp  jj2levelplayer.h  jj2levelplayerframe.cpp  levelplayer.cpp  levelplayer.h  levelplayerframe.cpp  player.cpp  player.h  playerframe.cpp
src/scale2x/: getopt.cpp  pixel.cpp  pixel.h  scale2x.cpp  scale2x.h  scale3x.h  simple2x.cpp
src/scene/: scene.cpp  scene.h  sceneload.cpp
symbian/s60v3/: BLD.INF  icons.mk  openjazz.mmp  openjazz.pkg  openjazz.rss  openjazz_reg.rss
symbian/uiq3/: BLD.INF  openjazz.mmp  openjazz.pkg  openjazz.rss  openjazz_reg.rss
tools/: extract_assets.py  extract_scenes.py  upscale_assets.py
unix/: OpenJazz.6.pod  OpenJazz.desktop
wii/: READMII.txt  meta.xml
windows/: OpenJazz.rc
